--- a/package.json
+++ b/package.json
@@ -6,7 +6,8 @@
   "scripts": {
     "dev": "vite",
     "build": "vue-tsc -b && vite build",
-    "preview": "vite preview"
+    "preview": "vite preview",
+    "test": "vitest"
   },
   "dependencies": {
     "vue": "^3.4.37"
@@ -16,6 +17,7 @@
     "ava": "^6.1.3",
     "typescript": "^5.5.3",
     "vite": "^5.4.1",
+    "vitest": "^2.1.1",
     "vue-tsc": "^2.0.29"
   }
 }
