Added Github pages

--- a/.github/workflows/main.yml
+++ b/.github/workflows/main.yml
@@ -8,5 +8,12 @@ jobs:
   build:
     uses: ./.github/workflows/build.yml
 
+  deploy:
+    permissions:
+      contents: read
+      pages: write
+      id-token: write
+    uses: ./.github/workflows/deploy.yml
+
   test:
     uses: ./.github/workflows/test.yml
