--- a/package.json
+++ b/package.json
@@ -1,9 +1,12 @@
 {
   "name": "retro-reader-pwa",
   "private": true,
+  "homepage": "https://brettmcginnis.github.io/retro-reader-pwa",
   "version": "0.0.0",
   "type": "module",
   "scripts": {
+    "predeploy": "npm run build",
+    "deploy": "gh-pages -d dist",
     "dev": "vite",
     "build": "vue-tsc -b && vite build",
     "preview": "vite preview",
@@ -15,6 +18,7 @@
   "devDependencies": {
     "@vitejs/plugin-vue": "^5.1.2",
     "ava": "^6.1.3",
+    "gh-pages": "^6.2.0",
     "typescript": "^5.5.3",
     "vite": "^5.4.1",
     "vitest": "^2.1.1",
