--- a/package.json
+++ b/package.json
@@ -13,6 +13,9 @@
     "test": "vitest"
   },
   "dependencies": {
+    "@vueuse/rxjs": "^11.2.0",
+    "dexie": "^4.0.9",
+    "rxjs": "^7.8.1",
     "vue": "^3.4.37"
   },
   "devDependencies": {
