--- a/package.json
+++ b/package.json
@@ -1,30 +1,45 @@
 {
   "name": "retro-reader-pwa",
-  "private": true,
-  "homepage": "https://brettmcginnis.github.io/retro-reader-pwa",
-  "version": "0.0.0",
-  "type": "module",
+  "version": "1.0.0",
+  "description": "A PWA for reading and bookmarking retro game guides",
+  "main": "index.js",
   "scripts": {
-    "predeploy": "npm run build",
-    "deploy": "gh-pages -d dist",
     "dev": "vite",
-    "build": "vue-tsc -b && vite build",
+    "build": "tsc && vite build",
     "preview": "vite preview",
-    "test": "vitest"
+    "lint": "eslint . --ext ts,tsx --report-unused-disable-directives --max-warnings 0",
+    "typecheck": "tsc --noEmit",
+    "test": "jest",
+    "test:watch": "jest --watch",
+    "test:coverage": "jest --coverage"
   },
   "dependencies": {
-    "@vueuse/rxjs": "^11.2.0",
-    "dexie": "^4.0.9",
-    "rxjs": "^7.8.1",
-    "vue": "^3.4.37"
+    "idb": "^8.0.0",
+    "react": "^19.1.0",
+    "react-dom": "^19.1.0"
   },
   "devDependencies": {
-    "@vitejs/plugin-vue": "^5.1.2",
-    "ava": "^6.1.3",
-    "gh-pages": "^6.2.0",
-    "typescript": "^5.5.3",
-    "vite": "^5.4.1",
-    "vitest": "^2.1.1",
-    "vue-tsc": "^2.0.29"
-  }
+    "@testing-library/jest-dom": "^6.6.3",
+    "@testing-library/react": "^16.3.0",
+    "@testing-library/user-event": "^14.6.1",
+    "@types/jest": "^30.0.0",
+    "@types/node": "^20.0.0",
+    "@types/react": "^19.1.8",
+    "@types/react-dom": "^19.1.6",
+    "@typescript-eslint/eslint-plugin": "^8.34.1",
+    "@typescript-eslint/parser": "^8.34.1",
+    "@vitejs/plugin-react": "^4.5.2",
+    "eslint": "^8.45.0",
+    "eslint-plugin-react": "^7.37.5",
+    "eslint-plugin-react-hooks": "^5.2.0",
+    "eslint-plugin-react-refresh": "^0.4.20",
+    "jest": "^30.0.2",
+    "jest-environment-jsdom": "^30.0.2",
+    "ts-jest": "^29.4.0",
+    "typescript": "^5.0.2",
+    "vite": "^5.0.0",
+    "vite-plugin-pwa": "^0.17.0",
+    "workbox-window": "^7.0.0"
+  },
+  "type": "module"
 }
