--- a/.github/workflows/test.yml
+++ b/.github/workflows/test.yml
@@ -10,4 +10,6 @@ jobs:
     steps:
       - uses: actions/checkout@v4
       - run: npm install
+      - run: npm run lint
+      - run: npm run typecheck
       - run: npm run test
