--- a/.github/workflows/pull_request.yml
+++ b/.github/workflows/pull_request.yml
@@ -7,5 +7,8 @@ jobs:
   build:
     uses: ./.github/workflows/build.yml
 
+  lint:
+    uses: ./.github/workflows/lint.yml
+
   test:
     uses: ./.github/workflows/test.yml
