--- a/package.json
+++ b/package.json
@@ -16,12 +16,19 @@
     "test:ui:watch": "jest --testMatch=\"**/*.test.tsx\" --watch"
   },
   "dependencies": {
+    "@headlessui/react": "^2.2.4",
+    "@tanstack/react-virtual": "^3.13.12",
+    "clsx": "^2.1.1",
     "idb": "^8.0.0",
+    "lucide-react": "^0.525.0",
     "react": "^19.1.0",
-    "react-dom": "^19.1.0"
+    "react-dom": "^19.1.0",
+    "react-hot-toast": "^2.5.2"
   },
   "devDependencies": {
     "@happy-dom/jest-environment": "^18.0.1",
+    "@tailwindcss/forms": "^0.5.10",
+    "@tailwindcss/typography": "^0.5.16",
     "@testing-library/jest-dom": "^6.6.3",
     "@testing-library/react": "^16.3.0",
     "@testing-library/user-event": "^14.6.1",
@@ -32,6 +39,7 @@
     "@typescript-eslint/eslint-plugin": "^8.34.1",
     "@typescript-eslint/parser": "^8.34.1",
     "@vitejs/plugin-react": "^4.5.2",
+    "autoprefixer": "^10.4.21",
     "eslint": "^8.45.0",
     "eslint-plugin-react": "^7.37.5",
     "eslint-plugin-react-hooks": "^5.2.0",
@@ -39,6 +47,9 @@
     "happy-dom": "^18.0.1",
     "jest": "^30.0.2",
     "jest-environment-jsdom": "^30.0.2",
+    "jsdom-testing-mocks": "^1.13.1",
+    "postcss": "^8.5.6",
+    "tailwindcss": "^3.4.17",
     "ts-jest": "^29.4.0",
     "typescript": "^5.0.2",
     "vite": "^5.0.0",
