--- a/package.json
+++ b/package.json
@@ -9,11 +9,9 @@
     "preview": "vite preview",
     "lint": "eslint . --ext ts,tsx --report-unused-disable-directives --max-warnings 0",
     "typecheck": "tsc --noEmit",
-    "test": "jest --testMatch=\"**/*.test.ts\"",
-    "test:watch": "jest --testMatch=\"**/*.test.ts\" --watch",
-    "test:coverage": "jest --coverage",
-    "test:ui": "jest --testMatch=\"**/*.test.tsx\"",
-    "test:ui:watch": "jest --testMatch=\"**/*.test.tsx\" --watch"
+    "test": "jest",
+    "test:watch": "jest --watch",
+    "test:coverage": "jest --coverage"
   },
   "dependencies": {
     "@headlessui/react": "^2.2.4",
