--- a/package.json
+++ b/package.json
@@ -4,7 +4,7 @@
   "description": "A PWA for reading and bookmarking retro game guides",
   "main": "index.js",
   "scripts": {
-    "dev": "vite",
+    "dev": "vite --host",
     "build": "tsc && vite build",
     "preview": "vite preview",
     "lint": "eslint . --ext ts,tsx --report-unused-disable-directives --max-warnings 0",
