--- a/package.json
+++ b/package.json
@@ -49,6 +49,7 @@
     "postcss": "^8.5.6",
     "tailwindcss": "^3.4.17",
     "ts-jest": "^29.4.0",
+    "tsr": "^1.3.4",
     "typescript": "^5.0.2",
     "vite": "^5.0.0",
     "vite-plugin-pwa": "^0.17.0",
