--- a/package.json
+++ b/package.json
@@ -7,7 +7,8 @@
     "dev": "vite --host",
     "build": "tsc && vite build",
     "preview": "vite preview",
-    "lint": "eslint . --ext ts,tsx --report-unused-disable-directives --max-warnings 0",
+    "lint": "eslint . --ext ts,tsx --report-unused-disable-directives --max-warnings 0 && npm run tsr:check",
+    "tsr:check": "tsr 'src/.*\\.tsx?$'",
     "typecheck": "tsc --noEmit",
     "test": "jest",
     "test:watch": "jest --watch",
@@ -49,6 +50,7 @@
     "postcss": "^8.5.6",
     "tailwindcss": "^3.4.17",
     "ts-jest": "^29.4.0",
+    "tsr": "^1.3.4",
     "typescript": "^5.0.2",
     "vite": "^5.0.0",
     "vite-plugin-pwa": "^0.17.0",
