--- a/package.json
+++ b/package.json
@@ -9,6 +9,7 @@
     "preview": "vite preview",
     "lint": "eslint . --ext ts,tsx --report-unused-disable-directives --max-warnings 0 && npm run tsr:check",
     "tsr:check": "tsr 'src/.*\\.tsx?$'",
+    "ts-prune": "ts-prune",
     "typecheck": "tsc --noEmit",
     "test": "jest",
     "test:watch": "jest --watch",
@@ -50,6 +51,7 @@
     "postcss": "^8.5.6",
     "tailwindcss": "^3.4.17",
     "ts-jest": "^29.4.0",
+    "ts-prune": "^0.10.3",
     "tsr": "^1.3.4",
     "typescript": "^5.0.2",
     "vite": "^5.0.0",
