--- a/package.json
+++ b/package.json
@@ -22,7 +22,8 @@
     "lucide-react": "^0.525.0",
     "react": "^19.1.0",
     "react-dom": "^19.1.0",
-    "react-hot-toast": "^2.5.2"
+    "react-hot-toast": "^2.5.2",
+    "zustand": "^5.0.6"
   },
   "devDependencies": {
     "@happy-dom/jest-environment": "^18.0.1",
